<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <view android:layout_width="300dp" android:layout_height="300dp"
          class="com.example.game.ScacchieraView"
          id="@+id/view"
          android:id="@+id/viewscacchiera"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
          app:layout_constraintTop_toBottomOf="@+id/textVittorie" app:layout_constraintHorizontal_bias="0.491"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="220dp"
            android:layout_height="34dp"
            android:max="6"
            android:progress="3"
            android:id="@+id/seekBar"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textTitolo"
            android:layout_marginStart="144dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/dimensione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textDim" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textTitolo"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/scacchiera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTitolo" android:textSize="24sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ToggleButton
            android:text="@string/gioca"
            android:layout_width="127dp"
            android:layout_height="66dp"
            android:id="@+id/toggleGioca" android:textOff="@string/gioca"
            android:textOn="@string/riavvia"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="24sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textDim"/>
    <TextView
            android:text="@string/nvittorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textNvitt" android:textSize="24sp" app:layout_constraintStart_toEndOf="@+id/textVittorie"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textNmosse"
    />
    <TextView
            android:text="20"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/textNmosse" android:textSize="24sp" app:layout_constraintStart_toEndOf="@+id/textMosse"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/seekBar"
            android:layout_marginStart="4dp"/>
    <TextView
            android:text="@string/mosse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textMosse" android:textSize="24sp"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintStart_toEndOf="@+id/toggleGioca" android:layout_marginStart="36dp"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/seekBar"/>
    <TextView
            android:text="@string/vittorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textVittorie" android:textSize="24sp" app:layout_constraintStart_toEndOf="@+id/toggleGioca"
            android:layout_marginStart="36dp"
            android:textColor="@android:color/holo_green_dark" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textMosse"/>
    <android.support.constraint.Guideline android:layout_width="0dp" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="212dp"
                                          android:orientation="horizontal" app:layout_constraintTop_toTopOf="parent"
                                          android:layout_marginTop="212dp"/>
</android.support.constraint.ConstraintLayout>